@@ -66,6 +66,11 @@ else $graph_type = '';
 //$ttl_param = get_parameter('ttl', 1);
 //$homeurl_param = get_parameter('homeurl', '');
 
+// Turn on output buffering.
+// The entire buffer will be discarded later so that any accidental output
+// does not corrupt images generated by fgraph.
+ob_start ();
+
 if (!empty($graph_type)) {
 	include_once($homeurl . 'include/functions.php');
 	include_once($homeurl . 'include/functions_html.php');
@@ -74,6 +79,9 @@ if (!empty($graph_type)) {
 	include_once($homeurl . 'include/graphs/functions_gd.php');
 	include_once($homeurl . 'include/graphs/functions_utils.php');
 }
+
+// Clean the output buffer and turn off output buffering
+ob_end_clean ();
 
 switch($graph_type) {
 	case 'histogram': 
