@@ -1,3 +1,8 @@
+2012-06-08  Ramon Novoa  <rnovoa@artica.es>
+
+	* include/graphs/fgraph.php: Protect against accidental output that
+	  might corrupt an image.
+
 2012-06-08 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* include/functions_modules.php,
